# Geiger-Counter-V3

./: .gitmodules  CMakeLists.txt  README.md
components/: count_loc.sh
components/PixelUI/: CMakeLists.txt
components/PixelUI/include/: PixelUI.h  config.h
components/PixelUI/include/blinker/: Blinker.h
components/PixelUI/include/core/AtomicGuard/: AtomicGuard.h
components/PixelUI/include/core/StateMachine/StateMachine/: StateMachine.hpp
components/PixelUI/include/core/ViewManager/: ViewManager.h
components/PixelUI/include/core/animation/: animation.h
components/PixelUI/include/core/app/: IApplication.h  app_system.h
components/PixelUI/include/core/coroutine/: Coroutine.h
components/PixelUI/include/focus/: focus.h
components/PixelUI/include/ui/AppLauncher/: AppLauncher.h
components/PixelUI/include/ui/IconView/: IconView.h
components/PixelUI/include/ui/ListView/: ListView.h
components/PixelUI/include/ui/Popup/: Popup.h  PopupBase.h  PopupInfo.h  PopupInterface.h  PopupManager.h  PopupProgress.h  PopupValue4Digits.h
components/PixelUI/include/widgets/: IWidget.h
components/PixelUI/include/widgets/analog_clock/: analog_clock.h
components/PixelUI/include/widgets/brace/: brace.h
components/PixelUI/include/widgets/curve_chart/: curve_chart.h
components/PixelUI/include/widgets/histogram/: histogram.h
components/PixelUI/include/widgets/icon_button/: icon_button.h
components/PixelUI/include/widgets/label/: label.h
components/PixelUI/include/widgets/num_scroll/: num_scroll.h
components/PixelUI/include/widgets/text_button/: text_button.h
components/PixelUI/include/widgets/timescroll/: timescroll.h
components/PixelUI/src/: CMakeLists.txt  PixelUI.cpp
components/PixelUI/src/blinker/: Blinker.cpp
components/PixelUI/src/core/AtomicGuard/: AtomicGuard.cpp
components/PixelUI/src/core/ViewManager/: ViewManager.cpp
components/PixelUI/src/core/animation/: animation.cpp
components/PixelUI/src/core/app/: app_system.cpp
components/PixelUI/src/core/coroutine/: Coroutine.cpp
components/PixelUI/src/focus/: focus.cpp
components/PixelUI/src/ui/AppLauncher/: AppLauncher.cpp
components/PixelUI/src/ui/IconView/: IconView.cpp
components/PixelUI/src/ui/ListView/: ListView.cpp
components/PixelUI/src/ui/Popup/: PopupBase.cpp  PopupInfo.cpp  PopupManager.cpp  PopupProgress.cpp  PopupValue4Digits.cpp
components/PixelUI/src/widgets/analog_clock/: analog_clock.cpp
components/PixelUI/src/widgets/brace/: brace.cpp
components/PixelUI/src/widgets/curve_chart/: curve_chart.cpp
components/PixelUI/src/widgets/histogram/: histogram.cpp
components/PixelUI/src/widgets/icon_button/: icon_button.cpp
components/PixelUI/src/widgets/label/: label.cpp
components/PixelUI/src/widgets/num_scroll/: num_scroll.cpp
components/PixelUI/src/widgets/text_button/: text_button.cpp
components/apps/: CMakeLists.txt  app_about.cpp  app_boot.cpp  app_charging_animation.cpp  app_counter.cpp  app_cube.cpp  app_environment.cpp  app_game_pong.cpp  app_games.cpp  app_penis.cpp  app_registry.cpp  app_registry.h  app_settings.cpp  app_silly_cat.cpp  app_time_setting.cpp  racing_game.cpp
components/apps/app_settings_utils/: app_time_setting.cpp
components/apps/app_ui_utils/: app_charging_animation.cpp  app_silly_cat.cpp
components/battery_task/: CMakeLists.txt  battery.cpp  battery.h
components/bme280/: CMakeLists.txt  bme280.c  bme280_port.cpp  bme280_port.h
components/counter_task/: CMakeLists.txt  counter_task.cpp
components/led/: led.h  (+1 more)
main/: CMakeLists.txt  GPIO.cpp  GPIO_definitions.h  Kconfig.projbuild  boot_bmp.h  common.h  counter_task.cpp  counter_task.h  encoder_task.cpp  encoder_task.h  i2c.cpp  i2c.h  idf_component.yml  main.cpp  pin_definitions.h  system_varibles.h  ui_heartbeat_task.h
(+30 files in other folders)
